Setup Project with Pages

--- a/app/templates/pages/about.jinja
+++ b/app/templates/pages/about.jinja
@@ -8,7 +8,7 @@
 
     <h2>Flask</h2>
 
-    <p>FLask is a web app engine in Python</p>
+    <p>Flask is a web app engine in Python</p>
 
     <h2>Jinja</h2>
 
