--- a/app/templates/pages/base.jinja
+++ b/app/templates/pages/base.jinja
@@ -7,6 +7,7 @@
         <title>{% block title %}{% endblock %}</title>
 
         <link rel="stylesheet" href="css/pico.green.min.css">
+        <link rel="stylesheet" href="/static/css/style.css">  
     </head>
 
     <body>
@@ -24,13 +25,14 @@
 
             </nav>
         </header>
-    </body>
 
     <main>
         
 
     {% block content %}
     {% endblock %}
+    </main>
+
     </body>
 
 </html>
