Creating Form/404 and Number + Adding to existing

--- a/app/templates/pages/base.jinja
+++ b/app/templates/pages/base.jinja
@@ -6,8 +6,8 @@
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %}</title>
 
-        <link rel="stylesheet" href="css/pico.green.min.css">
-        <link rel="stylesheet" href="/static/css/style.css">  
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.lime.min.css">
+        <link rel="stylesheet" href="/static/css/styles.css">
     </head>
 
     <body>
@@ -18,20 +18,25 @@
                 </ul>
 
                 <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/random">Random</a></li>
+                    <li><a href="/">HOME</a></li>
+                    <li><a href="/about">ABOUT</a></li>
+                    <li><a href="/random">RANDOM</a></li>
+                    <li><a href="/form">FORM</a></li>
                 </ul>
 
             </nav>
         </header>
 
-    <main>
-        
+        <main>
 
-    {% block content %}
-    {% endblock %}
-    </main>
+            {% block content %}
+            {% endblock %}
+
+        </main>
+
+        <footer>
+            &copy; ZACHYCHAN 2025
+        </footer>
 
     </body>
 
