--- a/app/templates/pages/home.jinja
+++ b/app/templates/pages/home.jinja
@@ -2,11 +2,11 @@
 
 {% block title %}
     Flask Demo - Hello!
-    {% endblock %}
+{% endblock %}
+
 
 {% block content %}
-
-    <h1>Hello World!</h1>
+    <h1>Hello, World!</h1>
 
     <p>This is my first Flask web app!!!</p>
 {% endblock %}
