--- a/app/templates/pages/number.jinja
+++ b/app/templates/pages/number.jinja
@@ -1,13 +1,13 @@
 {% extends 'pages/base.jinja' %}
 
 {% block title %}
-    Flask Demo - Random Number
+    Flask Demo - Here is your Number
 {% endblock %}
 
 
 {% block content %}
 
-    <h2>A Lovely Random Number...</h2>
+    <h2>Here is Your Number...</h2>
 
     <article id="random">
         {{ number }}
