--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2,4 +2,6 @@ article#random {
     font-size: 12rem;
     text-align: center;
     color: var(--pico-primary);
+    font-weight: bold;
+    line-height: 1.1;
 }
