--- a/app/templates/pages/about.jinja
+++ b/app/templates/pages/about.jinja
@@ -1,17 +1,16 @@
 {% extends 'pages/base.jinja' %}
 
 {% block title %}
-    Flask Demo - About!
-    {% endblock %}
+    Flask Demo - About
+{% endblock %}
+
 
 {% block content %}
-
     <h2>Flask</h2>
 
     <p>Flask is a web app engine in Python</p>
 
     <h2>Jinja</h2>
 
-    <p>Jinja is a templating engine</p>
-
+    <p>Jinja is a templating engine.</p>
 {% endblock %}
